@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add unit test exposing a weight reduction issue with containers.
+Nicolas Weeger 2010-09-11
+
 Fix fishing rod not being correctly applied with ready_skill.
 This fixes the second part of bug #3060474.
 Nicolas Weeger 2010-09-08
